api to fetch all files info for giving file name and possibly size
