# gen/restapi/operations/duplicates_responses.go
@@ -1,0 +1,121 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/wangkebin/kbds-ref-restapi/gen/models"
+)
+
+// DuplicatesOKCode is the HTTP code returned for type DuplicatesOK
+const DuplicatesOKCode int = 200
+
+/*
+DuplicatesOK Successfully posted the list of fileinfo resources
+
+swagger:response duplicatesOK
+*/
+type DuplicatesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Files `json:"body,omitempty"`
+}
+
+// NewDuplicatesOK creates DuplicatesOK with default headers values
+func NewDuplicatesOK() *DuplicatesOK {
+
+	return &DuplicatesOK{}
+}
+
+// WithPayload adds the payload to the duplicates o k response
+func (o *DuplicatesOK) WithPayload(payload models.Files) *DuplicatesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the duplicates o k response
+func (o *DuplicatesOK) SetPayload(payload models.Files) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DuplicatesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.Files{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*
+DuplicatesDefault generic error response
+
+swagger:response duplicatesDefault
+*/
+type DuplicatesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDuplicatesDefault creates DuplicatesDefault with default headers values
+func NewDuplicatesDefault(code int) *DuplicatesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DuplicatesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the duplicates default response
+func (o *DuplicatesDefault) WithStatusCode(code int) *DuplicatesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the duplicates default response
+func (o *DuplicatesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the duplicates default response
+func (o *DuplicatesDefault) WithPayload(payload *models.Error) *DuplicatesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the duplicates default response
+func (o *DuplicatesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DuplicatesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
